--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,21 @@
 asgiref==3.2.10
+attrs==21.2.0
 certifi==2021.5.30
 charset-normalizer==2.0.4
 Django==2.2.9
 django-filter==2.4.0
 djangorestframework==3.12.4
 idna==3.2
+iniconfig==1.1.1
 jsonpath==0.82
 Markdown==3.3.4
+packaging==21.0
+pluggy==0.13.1
+py==1.10.0
+pyparsing==2.4.7
+pytest==6.2.4
 pytz==2021.1
 requests==2.26.0
 sqlparse==0.4.1
+toml==0.10.2
 urllib3==1.26.6
